--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="Silver">#FFC0C0C0</color>
     <color name="Gray">#FF808080</color>
     <color name="Black">#FF000000</color>
-    <color name="Red">#FFFF0000</color>
+    <color name="Orange">#FF5722</color>
     <color name="Maroon">#FF800000</color>
     <color name="Yellow">#FFFFFF00</color>
     <color name="Olive">#FF808000</color>
